--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,9 @@
 
 body {
     background-color: black;
-    font-family: 'Inconsolata', monospace;
+    font-family: 'Consolas', 'Inconsolata', monospace;
+    padding: 10px;
+    margin: 0px;
 }
 
 canvas {
@@ -14,19 +16,15 @@ canvas {
 }
 
 #fps {
-    color: #FF0000;
-    background-color: black;
+    color: blue;
     display: inline;
     font-size: 200%;
-    padding: 0px;
-    margin: 10px;
+    padding: 10px;
 }
 
 #tps {
-    color: #00FFFF;
-    background-color: black;
+    color: yellow;
     display: inline;
     font-size: 200%;
-    padding: 0px;
-    margin: 10px;
+    padding: 10px;
 }
